<resources>
    <string name="app_name">GHPrototye4</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Story</string>
    <string name="tab_text_2">Attempts</string>
    <string name="tab_text_3">Rewards</string>

    <string name="label_current_location_name">Current Party Location:</string>
    <string name="label_global_achievements_gained">Global Achievements Gained:</string>
    <string name="label_global_achievements_lost">Global Achievements Lost:</string>
    <string name="label_party_achievements_gained">Party Achievements Gained:</string>
    <string name="label_party_achievements_lost">Party Achievements Lost:</string>
    <string name="label_unlocked_scenarios">Unlocked Scenarios:</string>
    <string name="label_blocked_scenarios">Blocked Scenarios:</string>
    <string name="label_additional_rewards">Additional Rewards:</string>
    <string name="label_additional_penalties">Additional Penalties:</string>
    <string name="label_teaser">Teaser</string>
    <string name="label_summary">Summary</string>
    <string name="label_conclusion">Conclusion</string>
    <string name="label_location">Location:</string>
    <string name="status_no_current_game">Last Time In Gloomhaven...</string>
    <string name="status_current_game">Currently In Gloomhavan...</string>
    <string name="sample_scenario_summary">You were approached in the Sleeping Lion by a Valrath woman named Jekserah. She has a job for you: track down a thief and return some stolen goods - apparently some important documents. After some investigation, it sounds like you\'ll be beginning your journey at the Black Barrow....</string>
    <string name="sample_party_location_name">#0 Gloomhaven</string>
    <string name="sample_global_achievement">City Rule: Militaristic</string>
    <string name="sample_scenario_teaser">Welcome to gloomhaven, hey nana nana, Black Barrow!</string>
    <string name="spinner_global_achievements_gained_collapsed">Collapsed Global Achievements Gained Dropdown Spinner</string>
    <string name="spinner_global_achievements_lost_collapsed">Collapsed Achievements Lost Dropdown Spinner</string>
    <string name="spinner_party_achievements_gained_collapsed">Collapsed Party Achievements Gained Dropdown Spinner</string>
    <string name="spinner_party_achievements_lost_collapsed">Collapsed Party Achievements Lost Dropdown Spinner</string>
    <string name="spinner_unlocked_scenarios_collapsed">Collapsed Unlocked Scenarios Dropdown Spinner</string>
    <string name="spinner_blocked_scenarios_collapsed">Collapsed Blocked Scenarios Dropdown Spinner</string>
    <string name="spinner_additional_rewards_collapsed">Collapsed Additional Rewards Dropdown Spinner</string>
    <string name="spinner_additional_penalties_collapsed">Collapsed Additional Penalties Dropdown Spinner</string>
    <string name="spinner_global_achievements_gained_expanded">Expanded Global Achievements Gained Dropdown Spinner</string>
    <string name="spinner_global_achievements_lost_expanded">Expanded Achievements Lost Dropdown Spinner</string>
    <string name="spinner_party_achievements_gained_expanded">Expanded Party Achievements Gained Dropdown Spinner</string>
    <string name="spinner_party_achievements_lost_expanded">Expanded Party Achievements Lost Dropdown Spinner</string>
    <string name="spinner_unlocked_scenarios_expanded">Expanded Unlocked Scenarios Dropdown Spinner</string>
    <string name="spinner_blocked_scenarios_expanded">Expanded Blocked Scenarios Dropdown Spinner</string>
    <string name="spinner_extras_gained_expanded">Expanded Extra Rewards Gained Dropdown Spinner</string>
    <string name="spinner_extras_lost_expanded">Expanded Extra Rewards Lost Dropdown Spinner</string>
    <string name="text_welcome">Welcome To Gloomhaven Story Tracker!!!</string>
    <string name="text_none">None</string>
    <string name="label_status">Status:</string>
    <string name="status_completed">Completed</string>
    <string name="status_attempted">Attempted</string>
    <string name="status_unplayed">Not Played</string>
    <string name="sample_no_content_to_display">Nothing to see here!</string>
    <string name="text_no_attempts">There are no recorded attempts to display!</string>
    <string name="text_not_completed">This scenario has not been marked as complete. Rewards will show once the scenario has been completed.</string>
    <string name="label_date_attempted">Attempted On:</string>
    <string name="sample_date">09/6/2018</string>
    <string name="label_participants_button">Participating Characters</string>
    <string name="label_participating_characters">Participating Characters</string>
    <string name="label_Attempt_Successful">Attempt Successful?</string>
    <string name="label_non_participants">Non-Participating Characters</string>
    <string name="value_yes">Yes</string>
    <string name="value_no">No</string>
    <string name="label_last_time">Last Time In Gloomhaven &#8230;</string>
    <string name="label_current_party">Current Party</string>
    <string name="sample_party_name">Beer Chuggers</string>
    <string name="label_location_guide">Location Guide</string>
    <string name="label_campaign_history">Campaign History</string>
    <string name="label_select_party">Seclect Party</string>
    <string name="prompt_participating_characters">Participating Characters</string>
    <string name="prompt_non_participating_characters">Non-Participating Characters</string>
    <string name="error_invalid_query">Invalid query uri: </string>
    <string name="error_invalid_insert_uri">Invalid insert uri: </string>
    <string name="error_invalid_update_uri">Invalid update uri: </string>
    <string name="error_invalid_delete_uri">Invalid delete uri: </string>
    <string name="message_no_party_selected">Create a party --></string>
    <string name="dialog_select_party_title">Select Party</string>
    <string name="dialog_select_party_message">Select an existing party or create a new party.</string>
    <string name="dialog_select_party_add_label">New Party</string>
    <string name="dialog_select_party_select_label">Select Party</string>
    <string name="title_activity_create_party">CreateParty</string>
    <string name="default_no_unlocking_loc">No Unlocking Location</string>
    <string name="label_unlocking_location">Unlocked By:</string>
    <string name="button_cancel_edit">Cancel</string>
    <string name="label_save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_attempt_number">Attempt #</string>
    <string name="default_attempt_number">1</string>
    <string name="label_record_attempt">Record an Attempt</string>
    <string name="msg_no_attempts">You have not recorded any attempts for this scenario!</string>
    <string name="title_activity_record_attempt">Record New Attempt</string>
    <string name="default_date">default_date</string>
    <string name="sample_location_number">Location $d%1:</string>


</resources>
